--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   cached_network_image: ^3.4.1
   http: ^1.2.2
   qr_code_scanner: ^1.0.1
+  google_sign_in: ^6.2.1
+  firebase_auth: ^5.3.1
 
 dev_dependencies:
   flutter_test:
