--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   qr_code_scanner: ^1.0.1
   google_sign_in: ^6.2.1
   firebase_auth: ^5.3.1
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
